--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@ body {
 
 #masthead .wrap {
 	display: flex;
-	flex-direction: row no-wrap;
-	justify-content: space-between;
-	padding-right: 0;
+	padding-right: 1em;
 }
 
 .navigation-top,
@@ -16,18 +14,23 @@ body {
 	border-bottom: none;
 }
 
-.navigation-top .site-title,
-.navigation-top .site-title a {
-	color: #50e3c2;
+.navigation-top .site-title {
 	font-weight: 300;
 	line-height: 0;
 	display: block;
-	margin: auto auto auto 0;
-	vertical-align: middle;
+	margin: auto 0;
+}
+
+.navigation-top .site-title a {
+	color: #50e3c2;
 }
 
 .navigation-top .site-title span.weight {
 	font-weight: 700;
+}
+
+.navigation-top nav {
+	margin-left: auto;
 }
 
 .navigation-top nav a,
