--- a/style.css
+++ b/style.css
@@ -14,13 +14,26 @@
 	padding: 8em 2em 0;
 }
 
+@media screen and (min-width: 767px) {
+
+	.main-navigation a {
+		padding: 1em .75em;
+	}
+}
+
+@media screen and (min-width: 900px) {
+
+	.main-navigation a {
+		padding: 1em 1.25em;
+	}
+}
+
 @media screen and (min-width: 48em) {
 
 	.site-title {
 		font-size: 28px;
 	}
 
-	.navigation-top nav,
 	.site-footer {
 		margin-left: 0;
 	}
@@ -59,17 +72,23 @@
 	}
 }
 
-@media screen and (max-width: 768px) {
-
-	.site-title {
-		padding-left: 0;
-	}
-}
-
 @media screen and (max-width: 767px) {
 
 	.site-title {
 		padding-left: 1em;
+	}
+
+	.menu-menu-container {
+		position: absolute;
+		right: 0;
+	}
+
+	#top-menu a {
+		color: #555;
+	}
+
+	#top-menu a:hover {
+		color: #3748ac;
 	}
 
 	.site-footer .wrap ul {
@@ -94,11 +113,7 @@ body {
 #masthead .wrap {
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-direction: row no-wrap;
-	    flex-direction: row no-wrap;
-	-ms-flex-pack: justify;
-	    justify-content: space-between;
-	padding-right: 0;
+	padding-right: 1em;
 }
 
 .navigation-top,
@@ -107,18 +122,23 @@ body {
 	border-bottom: none;
 }
 
-.navigation-top .site-title,
-.navigation-top .site-title a {
-	color: #50e3c2;
+.navigation-top .site-title {
 	font-weight: 300;
 	line-height: 0;
 	display: block;
-	margin: auto auto auto 0;
-	vertical-align: middle;
+	margin: auto 0;
+}
+
+.navigation-top .site-title a {
+	color: #50e3c2;
 }
 
 .navigation-top .site-title span.weight {
 	font-weight: 700;
+}
+
+.navigation-top nav {
+	margin-left: auto;
 }
 
 .navigation-top nav a,
